[fix] 消除各个脚本各自定义JAVA_HOME过程，确保后期JAVA_HOME单处修改，全局有效。